--- a/src/shared/mails/networkersWelcome.handlebars
+++ b/src/shared/mails/networkersWelcome.handlebars
@@ -381,7 +381,7 @@
                     <table class="es-header" cellspacing="0" cellpadding="0" align="center"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:#FFA73B;background-repeat:repeat;background-position:center top">
                         <tr style="border-collapse:collapse">
-                            <td style="padding:0;Margin:0;background-color:#fb1a13" bgcolor="#fb1a13" align="center">
+                            <td style="padding:0;Margin:0;background-color:#c8102e" bgcolor="#c8102e" align="center">
                                 <table class="es-header-body" cellspacing="0" cellpadding="0" align="center"
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px">
                                     <tr style="border-collapse:collapse">
@@ -415,7 +415,7 @@
                     <table class="es-content" cellspacing="0" cellpadding="0" align="center"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
                         <tr style="border-collapse:collapse">
-                            <td style="padding:0;Margin:0;background-color:#fb1a13" bgcolor="#fb1a13" align="center">
+                            <td style="padding:0;Margin:0;background-color:#c8102e" bgcolor="#c8102e" align="center">
                                 <table class="es-content-body"
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px"
                                     cellspacing="0" cellpadding="0" align="center">
@@ -485,19 +485,22 @@
                                                                     style="Margin:0;padding-top:20px;padding-bottom:20px;padding-left:30px;padding-right:30px">
                                                                     <p
                                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:lato, 'helvetica neue', helvetica, arial, sans-serif;line-height:27px;color:#666666;font-size:18px">
-                                                                        A la plataforma con la podrás ayudar a tu
-                                                                        capítulo<br><br></p>
+                                                                        Bienvenid@ a tu plataforma para la administración de tu capítulo.<br>
+                                                                        Ingresa con las siguientes credenciales:<br>
+                                                                        usuario: {{objMail.user}}<br>
+                                                                        contraseña: {{objMail.pass}}<br><br></p>
                                                                 </td>
+                                                               
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
                                                                 <td align="center"
                                                                     style="Margin:0;padding-left:10px;padding-right:10px;padding-top:35px;padding-bottom:35px">
                                                                     <span class="es-button-border"
-                                                                        style="border-style:solid;border-color:#FFA73B;background:#fb1a13;border-width:1px;display:inline-block;border-radius:2px;width:auto"><a
+                                                                        style="border-style:solid;border-color:#FFA73B;background:#c8102e;border-width:1px;display:inline-block;border-radius:2px;width:auto"><a
                                                                             href="{{objMail.urlPlatform}}"
                                                                             class="es-button es-button-1"
                                                                             target="_blank"
-                                                                            style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;border-style:solid;border-color:#fb1a13;border-width:15px 30px;display:inline-block;background:#fb1a13;border-radius:2px;font-family:helvetica, 'helvetica neue', arial, verdana, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center">Ingresar</a></span>
+                                                                            style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;border-style:solid;border-color:#c8102e;border-width:15px 30px;display:inline-block;background:#c8102e;border-radius:2px;font-family:helvetica, 'helvetica neue', arial, verdana, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center">Ingresar</a></span>
                                                                 </td>
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
