--- a/src/shared/mails/receipt.handlebars
+++ b/src/shared/mails/receipt.handlebars
@@ -387,7 +387,7 @@ a {text-decoration: none;}
                     <table class="es-header" cellspacing="0" cellpadding="0" align="center"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:#FFA73B;background-repeat:repeat;background-position:center top">
                         <tr style="border-collapse:collapse">
-                            <td style="padding:0;Margin:0;background-color:#fb1a13" bgcolor="#fb1a13" align="center">
+                            <td style="padding:0;Margin:0;background-color:#c8102e" bgcolor="#c8102e" align="center">
                                 <table class="es-header-body" cellspacing="0" cellpadding="0" align="center"
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px">
                                     <tr style="border-collapse:collapse">
@@ -421,7 +421,7 @@ a {text-decoration: none;}
                     <table class="es-content" cellspacing="0" cellpadding="0" align="center"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
                         <tr style="border-collapse:collapse">
-                            <td style="padding:0;Margin:0;background-color:#fb1a13" bgcolor="#fb1a13" align="center">
+                            <td style="padding:0;Margin:0;background-color:#c8102e" bgcolor="#c8102e" align="center">
                                 <table class="es-content-body"
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px"
                                     cellspacing="0" cellpadding="0" align="center">
