Se modifican los templates de correos y el query para obtener la fecha de visita de visitantes

--- a/src/shared/mails/leadershipTeamWelcome.handlebars
+++ b/src/shared/mails/leadershipTeamWelcome.handlebars
@@ -489,9 +489,9 @@
                                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:lato, 'helvetica neue', helvetica, arial, sans-serif;line-height:27px;color:#666666;font-size:18px">
                                                                         Bienvenid@ a tu plataforma para la
                                                                         administración de tu capítulo.<br>
-                                                                        Ingresa con las siguientes credenciales:<br>
-                                                                        usuario: {{objMail.user}}<br>
-                                                                        contraseña: {{objMail.pass}}<br><br></p>
+                                                                        Ingresa con las siguientes credenciales:<br><br>
+                                                                        Usuario: {{objMail.user}}<br>
+                                                                        Contraseña: {{objMail.pass}}<br><br></p>
                                                                 </td>
 
                                                             </tr>
@@ -552,8 +552,7 @@
                                                                     style="padding:0;Margin:0;padding-top:20px;padding-left:30px;padding-right:30px">
                                                                     <p
                                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:lato, 'helvetica neue', helvetica, arial, sans-serif;line-height:27px;color:#666666;font-size:18px">
-                                                                        Si tienes alguna duda, solo responde este correo
-                                                                        - siempre estaremos felices de ayudarte.</p>
+                                                                        Si tienes alguna duda, solo responde este correo, siempre estaremos felices de ayudarte.</p>
                                                                 </td>
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
@@ -681,7 +680,7 @@
                                                                     align="center"><a target="_blank"
                                                                         href="https://viewstripo.email/?utm_source=templates&utm_medium=email&utm_campaign=software2&utm_content=trigger_newsletter"
                                                                         style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#CCCCCC;font-size:12px"><img
-                                                                            src="https://s3-general-cards.s3.us-west-1.amazonaws.com/Logo+Prasyde.png"
+                                                                            src="https://s3-bucket-users.s3.us-west-1.amazonaws.com/generalnetsessionmanager/Logo-Net-Session-Manager.png"
                                                                             alt
                                                                             style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
                                                                             width="125"></a></td>
