--- a/src/shared/mails/receipt.handlebars
+++ b/src/shared/mails/receipt.handlebars
@@ -638,7 +638,7 @@ a {text-decoration: none;}
                                                                     align="center"><a target="_blank"
                                                                         href="https://viewstripo.email/?utm_source=templates&utm_medium=email&utm_campaign=software2&utm_content=trigger_newsletter"
                                                                         style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#CCCCCC;font-size:12px"><img
-                                                                            src="https://s3-general-cards.s3.us-west-1.amazonaws.com/Logo+Prasyde.png"
+                                                                            src="https://s3-bucket-users.s3.us-west-1.amazonaws.com/generalnetsessionmanager/Logo-Net-Session-Manager.png"
                                                                             alt
                                                                             style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
                                                                             width="125"></a></td>
