--- a/src/shared/mails/temporalPassword.hbs
+++ b/src/shared/mails/temporalPassword.hbs
@@ -382,7 +382,7 @@ a {text-decoration: none;}
                     <table class="es-header" cellspacing="0" cellpadding="0" align="center"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:#FFA73B;background-repeat:repeat;background-position:center top">
                         <tr style="border-collapse:collapse">
-                            <td style="padding:0;Margin:0;background-color:#fb1a13" bgcolor="#fb1a13" align="center">
+                            <td style="padding:0;Margin:0;background-color:#c8102e" bgcolor="#c8102e" align="center">
                                 <table class="es-header-body" cellspacing="0" cellpadding="0" align="center"
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px">
                                     <tr style="border-collapse:collapse">
@@ -416,7 +416,7 @@ a {text-decoration: none;}
                     <table class="es-content" cellspacing="0" cellpadding="0" align="center"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
                         <tr style="border-collapse:collapse">
-                            <td style="padding:0;Margin:0;background-color:#fb1a13" bgcolor="#fb1a13" align="center">
+                            <td style="padding:0;Margin:0;background-color:#c8102e" bgcolor="#c8102e" align="center">
                                 <table class="es-content-body"
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px"
                                     cellspacing="0" cellpadding="0" align="center">
@@ -491,7 +491,7 @@ a {text-decoration: none;}
                                                                         podrás actualizar tu nueva contraseña.<br></p>
                                                                     <p
                                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:lato, 'helvetica neue', helvetica, arial, sans-serif;line-height:27px;color:#666666;font-size:18px">
-                                                                        <br>contraseña: {{objMail.password}}</p>
+                                                                        <br>Contraseña: {{objMail.password}}</p>
                                                                 </td>
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
@@ -499,8 +499,7 @@ a {text-decoration: none;}
                                                                     style="padding:0;Margin:0;padding-top:20px;padding-left:30px;padding-right:30px">
                                                                     <p
                                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:lato, 'helvetica neue', helvetica, arial, sans-serif;line-height:27px;color:#666666;font-size:18px">
-                                                                        Si tienes alguna duda, solo responde este correo
-                                                                        - siempre estaremos felices de ayudarte.</p>
+                                                                        Si tienes alguna duda, solo responde este correo, siempre estaremos felices de ayudarte.</p>
                                                                 </td>
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
@@ -628,7 +627,7 @@ a {text-decoration: none;}
                                                                     align="center"><a target="_blank"
                                                                         href="https://viewstripo.email/?utm_source=templates&utm_medium=email&utm_campaign=software2&utm_content=trigger_newsletter"
                                                                         style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#CCCCCC;font-size:12px"><img
-                                                                            src="https://s3-general-cards.s3.us-west-1.amazonaws.com/Logo+Prasyde.png"
+                                                                            src="https://s3-bucket-users.s3.us-west-1.amazonaws.com/generalnetsessionmanager/Logo-Net-Session-Manager.png"
                                                                             alt
                                                                             style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
                                                                             width="125"></a></td>
